Adapt javassist buildtime default configuration